--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -43,16 +43,16 @@
                         Margin="195.236,110.223,11,0" Height="22.959" VerticalAlignment="Top"
                         Text="{Binding CustomFormatString}"
                         IsEnabled="{Binding CustomFormatStringEnabled}"/>
-                    <Label Margin="195.236,133.866,0.246,130.203" Name="label3">Available options: {source} {title} {chapters}</Label>
+                    <TextBlock Margin="195.236,133.866,0.246,121" TextWrapping="Wrap" Height="36">Available options: {source} {title} {chapters} {preset} {date} {time} {quality}</TextBlock>
                     <TextBlock
-                        Height="21" HorizontalAlignment="Left" Margin="6,168.04,0,0" VerticalAlignment="Top" Width="82"
+                        Height="21" HorizontalAlignment="Left" Margin="6,176,0,0" VerticalAlignment="Top" Width="82"
                         Style="{StaticResource EmphasizedTitle}"
                         Text="Updates:" />
                     <CheckBox
-                        Height="16" Margin="94,168.04,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="182"
+                        Height="16" Margin="94,176,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="182"
                         IsChecked="{Binding UpdatesEnabled}">Enable automatic updates</CheckBox>
                     <Grid
-                        Height="31" Margin="111,190.04,11,0" VerticalAlignment="Top"
+                        Height="31" Margin="111,198,11,0" VerticalAlignment="Top"
                         Visibility="{Binding UpdatesEnabled, Converter={StaticResource VisibilityConverter}}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
