--- a/VidCoder/View/EncodingWindow.xaml
+++ b/VidCoder/View/EncodingWindow.xaml
@@ -500,14 +500,19 @@
                         Text="{Binding QualitySliderRightText}"/>
                     <CheckBox
                         Content="2-pass Encoding"
-                        Height="16" HorizontalAlignment="Left" Margin="124,112,0,0" VerticalAlignment="Top"
+                        Height="16" HorizontalAlignment="Left" Margin="124,143,0,0" VerticalAlignment="Top"
                         IsChecked="{Binding TwoPassEncoding}"
                         IsEnabled="{Binding TwoPassEncodingEnabled}"/>
                     <CheckBox
                         Content="Turbo first Pass"
-                        Height="16" HorizontalAlignment="Left" Margin="145,135,0,0" VerticalAlignment="Top"
+                        Height="16" HorizontalAlignment="Left" Margin="145,166,0,0" VerticalAlignment="Top"
                         IsChecked="{Binding TurboFirstPass}"
                         IsEnabled="{Binding TurboFirstPassEnabled}"/>
+                    <CheckBox
+                        Content="Peak Framerate (VFR)"
+                        Height="16" HorizontalAlignment="Left" Margin="124,109,0,0" VerticalAlignment="Top"
+                        IsChecked="{Binding PeakFramerate}"
+                        Visibility="{Binding PeakFramerateVisible, Converter={StaticResource VisibilityConverter}}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Audio">
