--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -44,15 +44,36 @@
                         Text="{Binding CustomFormatString}"
                         IsEnabled="{Binding CustomFormatStringEnabled}"/>
                     <TextBlock Margin="195.236,133.866,0.246,121" TextWrapping="Wrap" Height="36">Available options: {source} {title} {chapters} {preset} {date} {time} {quality}</TextBlock>
+                    
                     <TextBlock
-                        Height="21" HorizontalAlignment="Left" Margin="6,176,0,0" VerticalAlignment="Top" Width="82"
+                        Height="21" HorizontalAlignment="Left" Margin="6,184,0,0" VerticalAlignment="Top" Width="82"
+                        Style="{StaticResource EmphasizedTitle}"
+                        Text="Logging:" />
+                    <Label
+                        Content="Verbosity:"
+                        Height="28" HorizontalAlignment="Left" Margin="90,181,0,0" VerticalAlignment="Top" />
+                    <ComboBox
+                        Height="23" HorizontalAlignment="Left" Margin="156,184,0,0" VerticalAlignment="Top" Width="42"
+                        SelectedValue="{Binding LogVerbosity}"
+                        SelectedValuePath="Content">
+                        <ComboBoxItem>0</ComboBoxItem>
+                        <ComboBoxItem>1</ComboBoxItem>
+                        <ComboBoxItem>2</ComboBoxItem>
+                    </ComboBox>
+                    <TextBlock
+                        Height="40" HorizontalAlignment="Left" Margin="220,181,0,0" VerticalAlignment="Top" TextWrapping="Wrap"
+                        Text="Log verbosity will take effect on next scan or program restart."
+                        Visibility="{Binding LogVerbosityWarningVisible, Converter={StaticResource VisibilityConverter}}"/>
+
+                    <TextBlock
+                        Height="21" HorizontalAlignment="Left" Margin="6,223,0,0" VerticalAlignment="Top" Width="82"
                         Style="{StaticResource EmphasizedTitle}"
                         Text="Updates:" />
                     <CheckBox
-                        Height="16" Margin="94,176,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="182"
+                        Height="16" Margin="94,223,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="182"
                         IsChecked="{Binding UpdatesEnabled}">Enable automatic updates</CheckBox>
                     <Grid
-                        Height="31" Margin="111,198,11,0" VerticalAlignment="Top"
+                        Height="31" Margin="111,245,11,0" VerticalAlignment="Top"
                         Visibility="{Binding UpdatesEnabled, Converter={StaticResource VisibilityConverter}}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
