--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -60,8 +60,13 @@
 					Orientation="Horizontal" Margin="0,0,0,8" VerticalAlignment="Bottom" HorizontalAlignment="Center"
 					Visibility="{Binding GeneratingPreview, Converter={StaticResource VisibilityConverter}, ConverterParameter=True}">
 					<Button
-						Height="23" Width="60"
-						Command="{Binding GeneratePreviewCommand}">Play</Button>
+						Height="23" Width="126"
+						Command="{Binding GeneratePreviewCommand}" ToolTip="Encodes and plays a small preview clip from the selected screen. Uses current encoding settings.">
+						<StackPanel Orientation="Horizontal">
+							<Image Source="/Icons/play_clip.png" VerticalAlignment="Center" Height="15" />
+							<TextBlock Text="Play Preview Clip" Margin="5,0,0,0" VerticalAlignment="Center" />
+						</StackPanel>
+					</Button>
 					<ComboBox
 						Height="22" Width="40" Margin="20,0,0,0"
 						SelectedValue="{Binding PreviewSeconds}"
