--- a/VidCoder/View/ChapterMarkersDialog.xaml
+++ b/VidCoder/View/ChapterMarkersDialog.xaml
@@ -8,8 +8,34 @@
 			<TextBlock Text="{Binding Number}" />
 		</DataTemplate>
 		<DataTemplate x:Key="TitleTemplate">
-			<TextBox Width="200" Text="{Binding Title}" />
+			<TextBox Width="200" Text="{Binding Title}" GotFocus="TitleBoxGotFocus" />
 		</DataTemplate>
+		<Style x:Key="ChapterListItem" TargetType="ListViewItem">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ListViewItem}">
+						<Grid Margin="0,1,0,1">
+							<Grid.RowDefinitions>
+								<RowDefinition MaxHeight="11" />
+								<RowDefinition />
+							</Grid.RowDefinitions>
+
+							<Rectangle Name="UpperHighlight" Visibility="Collapsed" Fill="#75FFFFFF" />
+							<GridViewRowPresenter Grid.RowSpan="2" 
+								VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
+								SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+						</Grid>
+
+						<ControlTemplate.Triggers>
+							<Trigger Property="IsEnabled" Value="False">
+								<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+							</Trigger>
+						</ControlTemplate.Triggers>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+			<Setter Property="IsTabStop" Value="False" />
+		</Style>
 	</Window.Resources>
 	<Grid>
 		<RadioButton
@@ -26,7 +52,9 @@
 		<ListView
 			Margin="12,56,12,35"
 			IsEnabled="{Binding UseDefaultNames, Converter={StaticResource InverseBoolConverter}}"
-			ItemsSource="{Binding ChapterNames}">
+			ItemsSource="{Binding ChapterNames}"
+			KeyboardNavigation.TabNavigation="Continue"
+			ItemContainerStyle="{StaticResource ChapterListItem}">
 			<ListView.View>
 				<GridView>
 					<GridView.Columns>
